--- a/edit.html
+++ b/edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Order Sunglasses</h1>
-    <form action="myPhp.php" method="get">
+    <form method="get" action="http://se.shenkar.ac.il/students/2022-2023/web1/dev_13/exercises/ex4/edit.php">
         <label for="color">Color :</label>
         <select name="color" id="color">
             <option value="Black">Black</option>
